--- a/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
+++ b/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-15 qui 18:34
+% Created 2020-10-21 qua 15:22
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -54,7 +54,7 @@ Therefore, this model introduces both housing and asset bubbles	on Sraffian supe
 
 
 \section{Introduction}
-\label{sec:org71f1828}
+\label{sec:orgda61594}
 \label{sec:introduction}
 
 Non-residential investment is the most scrutinized variable in demand-led growth models so that others expenditures play a secondary role \cite{brochier_macroeconomics_2017}.
@@ -102,7 +102,7 @@ Section \ref{sec:Conclusion} offers some concluding remarks while Appendix \ref{
 
 
 \section{Empirical Motivation}
-\label{sec:org3f2ea7c}
+\label{sec:org12e66b3}
 \label{sec:empirical}
 
 A current trend among empirical research on demand-led growth is about the role of NCC autonomous expenditures.
@@ -187,10 +187,10 @@ On the following section, we investigate how demand-led growth theoretical liter
 
 
 \section{A Sraffian supermultiplier SFC model with residential investment}
-\label{sec:orgc954492}
+\label{sec:org81ea942}
 \label{sec:Model}
 \subsection{General equations}
-\label{sec:org9c8994b}
+\label{sec:orga4b603a}
 
 Our model is the most parsimonious as possible: a closed capitalist economy without government sector. Output (\(Y\)) is determined by  a fixed combination of a homogeneous labor (\(L\)) input with homogeneous fixed business capital (\(K_f\)). 
 For simplicity, we put technological progress, depreciation and goods inflation aside so investment is presented in net terms and all variables --- except for houses --- are measured in real terms.
@@ -331,7 +331,7 @@ Change in loans     & &$+\Delta L_{k}$&&$+\Delta L_f$& &$-\Delta L$& 0\\
 
 
 \subsection{Firms}
-\label{sec:org46cb565}
+\label{sec:org7979e19}
 
 In order to produce, firms purchase capital goods (\(-I_f\) in capital account) and hire workers, whom total remuneration is the economy wage bill. 
 Their total profits (\(FT\)) are a residual between sales (\(Y\)) and total wages (\(W\)). 
@@ -392,7 +392,7 @@ where \(r_g\) and \(r_n\) denotes gross and net profit rate respectively.
 \textbf{TODO:} Substituir letra da taxa de lucro por outra.
 
 \subsection{Banks}
-\label{sec:orgd284351}
+\label{sec:org0693dcc}
 
 As in most part of SFC literature, banks do not have an active role in this model.
 They create money as credit is demanded and just after they collect deposits \cite{le_bourva_money_1992}. 
@@ -430,10 +430,10 @@ $$
 \end{equation}
 
 \subsection{Households}
-\label{sec:orgd39d8b9}
+\label{sec:org4e8d98d}
 
 \subsubsection*{Workers}
-\label{sec:org580f120}
+\label{sec:org50bef42}
 As mentioned before, we assume that workers expend (\(C_w\)) what they earn (\(W\)). 
 For simplicity, we consider that wages are the only source of income workers' disposable income (\(YD_{w}\)) and do not have access to consumption loans, so worker' saving (\(S_{hw}\)) are null.
 Therefore, accordingly to our hypothesis, workers' do not hold both net financial and total wealth.
@@ -458,7 +458,7 @@ V_{w} = 0
 \end{equation}
 
 \subsubsection*{Capitalists}
-\label{sec:orge612651}
+\label{sec:org79ee1fd}
 This is the most complex institutional sector of our model. 
 We assume consumption (\(C_k\)) is fully-autonomous and financed by loans (\(L_{k}\)). 
 Disposable income (\(YD_k\)) is the sum of distributed profits and received interests on deposits, net of interests payments
@@ -558,11 +558,11 @@ On the next Section, we present the short-run and fully-adjusted position dynami
 
 
 \section{Short and long-run equilibria}
-\label{sec:org17645f3}
+\label{sec:orgf7b1fa6}
 \label{sec:runs}
 In this Section, we show the implications residential investment inclusion into a SSM-SFC model. First, we present the short-run dynamics and then move to the fully-adjusted position (denoted by \(\star\)).
 \subsection{Short-run good market equilibrium}
-\label{sec:org8812599}
+\label{sec:org8a23b80}
 \label{short}
 
 In this model, real output (equation \ref{_Y}) is the sum of household consumption (equation \ref{ConsumoTotal}) and both types of investment (equation \ref{_It}). 
@@ -636,7 +636,7 @@ k = \frac{(1-R)\cdot (1-h_t - \omega)}{\frac{g\cdot v}{u_t} + (1-R)\cdot (1-h_t 
 
 
 \subsection{Analytical Traverse}
-\label{sec:orgb0ce7be}
+\label{sec:orgb59dc4e}
 
 \textbf{Nota:} Optei por chamar de ``Analytical Traverse'' (não sei se faz sentido/existe) porque ainda vamos simular e estas relações não estão exatamente expressas ali.
 
@@ -656,7 +656,7 @@ This process continues as long as GDP growth rate moves towards NCC autonomous e
 
 
 \subsection{Fully-adjusted position}
-\label{sec:org922ade1}
+\label{sec:org9aeffb3}
 \label{long}
 
 As mentioned before, endogenous firms’ marginal propensity to invest reacts to discrepancies between the utilization rate and the normal one.  This adjustment process continues until actual a normal capacity utilization rate are equal:
@@ -750,7 +750,7 @@ However, it has permanent effects over capital stock composition as a result of 
 
 
 \section{Numerical Simulations}
-\label{sec:orgd65a9f8}
+\label{sec:org8473839}
 \label{sec:Experiments}
 \label{sec:Experiments}
 
@@ -765,7 +765,7 @@ Our first experiment assess if income distribution affects fully-adjusted positi
 Real estate inflation increase experiment is motivated by recent US experience (from 1992 to 2019) as discussed in Section \ref{sec:empirical} while the last simulation aims to evaluate indebtedness stability.
 Table \ref{tab:param} in Appendix \ref{append:Data} presents the parameters of simulation and Table \ref{ResumoChoques} compare each result to baseline.
 \subsection{Wage-share decrease}
-\label{sec:org090ec19}
+\label{sec:orgcbf5f29}
 \label{sec:Exp1}
 
 A wage-share decrease has a temporary negative impact both in GDP level and capacity utilization rate due to changes on the supermultiplier (see Figure \ref{fig:results_1}).
@@ -799,7 +799,7 @@ Therefore, as profits distribution policy remains the same, firms require less e
 \textbf{Nota:} Farei referência às equações stock/flow quando terminar esta seção
 
 \subsection{Real estate inflation}
-\label{sec:org06991d6}
+\label{sec:org60a81fc}
 \label{sec:Exp2}
 
 
@@ -830,7 +830,7 @@ also the utilization rate.
 In other words, both autonomous expenditures share on GDP --- higher supermultiplier --- and houses share on real assets (see Equation \ref{partial_pi}) decline as a result of the already described non-residential investment positive reaction.
 %Finally, it worth noting that real estate inflation also has permanent effects over real stock/flow ratios due to capital gains.
 \subsection{Interest rate increase}
-\label{sec:org4ac7467}
+\label{sec:org3c63778}
 \label{sec:Exp3}
 
 A increase in benchmark interest rate  has a persistent effect on long-run growth rate since houses own interest rate increases as well\footnote{Since we assume null spread on both mortgage and loans interest rate, an increase on deposits interest rate also increases the other ones. As a consequence, banks' net financial wealth remains unchanged.}.
@@ -891,7 +891,7 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 
 
 \subsection{Plugging real data}
-\label{sec:org109a75a}
+\label{sec:org1362ba1}
 
 
 Finally, we include houses own interest rate data into our model (see Figure \ref{fig:propria_investo}).
@@ -921,7 +921,7 @@ Together these results provide a first step towards the connection between asset
 
 
 \section{Concluding Remarks}
-\label{sec:orge94cc98}
+\label{sec:org81c17e7}
 \label{sec:Conclusion}
 This paper contributes to demand-led growth agenda, taking in consideration recent efforts of embedding it in a SFC framework.
 Our novelty is twofold: (i) inclusion of residential investment and (ii) determination of its growth rate by houses' own interest rate.
@@ -946,22 +946,22 @@ For example, future research could assess which institutional arrangements allow
 
 
 \section*{Acknowledgments}
-\label{sec:org69e39a1}
+\label{sec:org763e0c4}
 \noindent We  are  grateful  to  Lídia  Brochier,  Carolina  Baltar,  Franklin  Serrano  for  discussions,  as  well  as  comments  by  the participants of Cecon/Unicamp and UFRJ Political Economy research seminars and the participants of XII AKB meeting, 20th FMM forum, and 46th EEA Annual Conference. Any remaining errors are, of course, our own.
 
 \section*{Disclosure statement}
-\label{sec:orge27c440}
+\label{sec:orgf41e2db}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:orgf250a9d}
+\label{sec:org5047ff5}
 \printbibliography[heading=none]
 
 
 \appendix
 
 \section{Analytical Solution}
-\label{sec:orgcb5f226}
+\label{sec:org2eb6b29}
 \label{append:Solution}
 
 In this appendix, we present the partial derivatives of somes stock/flow ratios.
@@ -1007,7 +1007,7 @@ Since capitalists' loans and mortgage to house ratios (\(\ell^{\star}_{k}\) and 
 
 
 \section{Numerical Appendix}
-\label{sec:orgc0447e9}
+\label{sec:org6b8e49f}
 \label{append:Data}
 
 \begin{table}[H]
@@ -1019,14 +1019,14 @@ Since capitalists' loans and mortgage to house ratios (\(\ell^{\star}_{k}\) and 
 \end{table}
 
 
-240 - 6b96e4c2-62b8-4c73-960a-4824b8baa6d9 <output> <interrupt>
+57 - 8411a156-beb4-45b9-86db-d00e61e59e1d <output> <interrupt>
 
 
-241 - 80357189-44e6-4fcb-8828-6a306f66ad83 <output> <interrupt>
+58 - bbe5961e-1ed3-4c52-a8a1-8a6d609e84f1 <output> <interrupt>
 
 
-243 - edae6d87-8711-4d27-8228-464e6abd914f <output> <interrupt>
+60 - 3b655a0d-17c7-4b77-a995-b6d85ad39e8a <output> <interrupt>
 
 
-244 - dbfe5453-e11f-4b6f-9cdf-43ab70746e1d <output> <interrupt>
+61 - 1855c60e-ce5c-48e6-b022-a712da2b5906 <output> <interrupt>
 \end{document}
