--- a/Articles/SFC/Simulation.org
+++ b/Articles/SFC/Simulation.org
@@ -364,7 +364,7 @@ def other_plots(shock, df):
 
 #+RESULTS:
 :results:
-# Out [78]: 
+# Out [1]: 
 :end:
 
 
@@ -385,48 +385,48 @@ shock1.columns = ['$\Delta \phi_0$']
 
 #+RESULTS:
 :results:
-# Out [79]: 
+# Out [2]: 
 # text/plain
 : <Figure size 1728x360 with 3 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/82840f004b4ae2956a09aac102101cf3d848a5c7.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/a45c135db06cbe5eb2fab0981a49b1b505636c81.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/db9ad38911832052170665dd13bf39cbe79a6fdc.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/d9bb5adeda2f6f797d53bf230132be1351be0740.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/a2e3d14eebc6524cc8ef7aafb7e7aa40a3ea39f4.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/43733d5e90eb1746185a3c982a0b308244ac1623.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/e92a6e2fb874031231f6773941e132be79460a9e.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/271c17b11ee2271d9a769eba1312ed28f9fe85a1.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/206765c3e9dfd66919d2f357a9f58402817ad170.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/2e4c669c70fbc492eda9e785e9abcc3ee65c506c.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/138f35fa4034626546fc081d2e157d36944e2c2b.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/0c1df22e7602849ed22b6b947ccf3210b59af47d.png]]
 
 # text/plain
 : <Figure size 576x360 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/d3ef7d16a7c340d24d1b7789f1e8b332a280ed34.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/cb47f39d265547c8f5ad9bdc47a26521e64b9a21.png]]
 :end:
 
 ** Wage-share decrease ($\Downarrow \omega$)
@@ -446,48 +446,48 @@ shock2.columns = ['$\Delta \omega$']
 
 #+RESULTS:
 :results:
-# Out [80]: 
+# Out [3]: 
 # text/plain
 : <Figure size 1728x360 with 3 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/393333fe407ee25f2cec23f73a7ee1d3c718e28d.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/7f56fb9f0c2ee016ec11e56b920f88a28dc0a641.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/37cf354939657a8ff4d1b23d9b342494c210d5a9.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/c12c60aadc3d9f80def86cae4e4fd3f01841bd13.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/d58c7c84e59dca70b2624941923aad30930b7c2f.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/5cdd11eb195e4e34eff02dd252dc3299960f5429.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/097da4eb4da6fa3573bddbe856c04b5db2ba551d.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/940772180c1671e261e99c57231ac3c671d9a24f.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/0e75018270a2703f7f1fe6de0f044bdca2f547c4.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/8975664653d2e7b21f566e93b82f8c3be897f036.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/7ba935ea23a55d02d6040121db4b2ac14ca4d266.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/ec10378ccfdfb18a0470287809ad23e318fa3878.png]]
 
 # text/plain
 : <Figure size 576x360 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/b429e9f930fe1aa6bce3f5ab629677b7528aa7dc.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/1d40cea62017a44414d9f4b978f8c47528a33d96.png]]
 :end:
 
 ** Increase in mortgage interest rate
@@ -507,48 +507,48 @@ other_plots(shock, df=df)
 
 #+RESULTS:
 :results:
-# Out [81]: 
+# Out [4]: 
 # text/plain
 : <Figure size 1728x360 with 3 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/64fc11f11927b42d4f0454b0780a6f161371e3a1.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/36ddd54d66386a5c14c861380f87ae2e27f1af8f.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/432d7ecb56815d1531f3947cfee8e7c1b54e5ae9.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/dea7d03e536812f545bac79b3eefce6d042bb042.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/ecd49af3a38937b9722f89c2051fb0de3d1a1386.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/6a6047495c08b05baa987c1bf79d874dc6dabf35.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/6bda01376e0c787440ac8d7e974973ad1230718e.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/1e60238cacf9409af6cd301068545a05c6b534dc.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/906a5b023cb8a7c1a78051c3ff5c01eca67fbbd3.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/fe429c3f9f7529ecbf384f6328088c0c6471a69f.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/f86f7c35a0df0d7a59b1adc9ce6d0f06e32b8e9f.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/8b83d840a1e562b4ae0130367d7dc831cc9bbc13.png]]
 
 # text/plain
 : <Figure size 576x360 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/60116603dca1773c7c110654a0ea8b2e671bda88.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/5a5275e579de14886c9c9c434342c2be2cc47e5a.png]]
 :end:
 
 ** TODO Decrease in mortgage interest rate
@@ -568,48 +568,48 @@ other_plots(shock, df=df)
 
 #+RESULTS:
 :results:
-# Out [82]: 
+# Out [5]: 
 # text/plain
 : <Figure size 1728x360 with 3 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/ded0599eaf9c9dbc968b4ba19900f399035daa66.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/186904d7ae13ee4986928a3668f1d657f4f92a32.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/f0b4ce1934569799b1f847d99ccd3ff051497060.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/43128e4ed3cf4ef6003e601e20454a5813e91666.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/e1967ff9a373ce0190702e0174bcae741aaec19a.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/dacb176420a37572cd707aa512aad7fdc88e3b84.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/68b90eeeb1b809cbe6cfc9a88b0d9d62723f4f3f.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/c8a356183641516ea84894a9cc9040fdc61cd238.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/bbf62bc4168b919ee8889a3324d90aefd734dade.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/9358061f8e8c3f38bffc6bda3fc5f2f3d2b27638.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/22efbca09bda5361253b1821a5da9be13500d4c9.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/ffa0b37235713813190b4b20f73de679dd8c7593.png]]
 
 # text/plain
 : <Figure size 576x360 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/50ed3b9f13145cf200a816b2d6bf5f11a6b07b85.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/1ae6962ddc150b22de388e487922a61dcaffa1cc.png]]
 :end:
 
 ** Increase in house inflation
@@ -630,48 +630,48 @@ shock4.columns = ['$\pi$']
 
 #+RESULTS:
 :results:
-# Out [83]: 
+# Out [6]: 
 # text/plain
 : <Figure size 1728x360 with 3 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/6a9f7279a9c993451a3c2324b67c051f2bbde3f8.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/99ac70ac4fdb1eb568d84313b4fe3625ecb01ff1.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/23a93b1536ba67ca02964b36fee9bd6d5e8989fd.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/736f1405316a6d17573b252f125d723aac2923af.png]]
 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/d9393791e773ad7376ed7a89cc56c10e22d2fb2e.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/2baff68496e880178dd169c8a8c5aae28f798c6a.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/46bfa7eb8e533ba60ed02446cb6a7cd9d584d3c2.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/65e7e65be2ef407b4c021533865a5a6c63e129c3.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/595b3b8a9e8150480b93e630d5736b964fe4439e.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/d980b9b89b20f75734f16030c6be55a208affcb4.png]]
 
 # text/plain
 : <Figure size 432x288 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/6956c27a028174da98d3180d2276e3e0a2da018d.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/88e59507c227d36338985f391fa8600e3fb92f43.png]]
 
 # text/plain
 : <Figure size 576x360 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/d412686ef8f32a9668eb3887660d1165b5b0beea.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/e93c9fc6c530c9994c0b7f6b0fc1c7cc397089d7.png]]
 :end:
 
 
@@ -716,7 +716,7 @@ table
 
 #+RESULTS:
 :results:
-# Out [84]: 
+# Out [7]: 
 # text/plain
 :                Base scenario  $\Delta \phi_0$  $\Delta \omega$  $\Delta rm$  \
 : $\alpha$               0.500             0.50            0.500        0.500   
@@ -748,7 +748,7 @@ table
 : $R$            0.700  
 : $\pi$          0.050  
 
-[[file:/tmp/ob-ipython-html3GSJPs.html]]
+[[file:/tmp/ob-ipython-htmlXVHEmq.html]]
 :end:
 
 t> <interrupt> |
@@ -765,35 +765,35 @@ df_base = df
 
 fig, ax = plt.subplots(2,2, figsize=(2*8,2*5))
 
-df1['Y'].pct_change().plot(ls ='-', lw=3, color = "darkred", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[0,0])
-df2['Y'].pct_change().plot(ls ='-', lw=3, color = "darkblue", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[0,0])
-df3['Y'].pct_change().plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[0,0])
+df1['Y'].pct_change().plot(ls ='-', lw=3, color = "black", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[0,0])
+df2['Y'].pct_change().plot(ls ='-', lw=3, color = "darkgray", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[0,0])
+df3['Y'].pct_change().plot(ls ='-', lw=3, color = "gray", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[0,0])
 #df3b['Y'].pct_change().plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Downarrow r_m$ (Shock 3)", ax = ax[0,0])
-ax[0,0].axhline(y = df_base['g_Z'].iloc[-1], ls ='--', lw=1, color = "black", label = "Baseline")
+ax[0,0].axhline(y = df_base['g_Z'].iloc[-1], ls ='--', lw=1, color = "lightgray", label = "Baseline")
 ax[0,0].ticklabel_format(useOffset=False)
 ax[0,0].set_title('GDP growth rate ($g$)')
 
-df1['Z/Y'].plot(ls ='-', lw=3, color = "darkred", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[0,1])
-df2['Z/Y'].plot(ls ='-', lw=3, color = "darkblue", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[0,1])
-df3['Z/Y'].plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[0,1])
+df1['Z/Y'].plot(ls ='-', lw=3, color = "black", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[0,1])
+df2['Z/Y'].plot(ls ='-', lw=3, color = "darkgray", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[0,1])
+df3['Z/Y'].plot(ls ='-', lw=3, color = "gray", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[0,1])
 #df3b['Z/Y'].plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Downarrow r_m$ (Shock 3)", ax = ax[0,1])
-ax[0,1].axhline(y = df_base['Z/Y'].iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+ax[0,1].axhline(y = df_base['Z/Y'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[0,1].ticklabel_format(useOffset=False)
 ax[0,1].set_title('Autonomous Expenditure\nShare on GDP ($Z/Y$)')
 
-df1['u'].plot(ls ='-', lw=3, color = "darkred", label = "$\\Downarrow \omega$ (Shock 3)", ax = ax[1,0])
-df2['u'].plot(ls ='-', lw=3, color = "darkblue", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[1,0])
-df3['u'].plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Uparrow r_m$ (Shock 4)", ax = ax[1,0])
+df1['u'].plot(ls ='-', lw=3, color = "black", label = "$\\Downarrow \omega$ (Shock 3)", ax = ax[1,0])
+df2['u'].plot(ls ='-', lw=3, color = "darkgray", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[1,0])
+df3['u'].plot(ls ='-', lw=3, color = "gray", label = "$\\Uparrow r_m$ (Shock 4)", ax = ax[1,0])
 #df3b['u'].plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Downarrow r_m$ (Shock 4)", ax = ax[1,0])
-ax[1,0].axhline(y = df_base['u'].iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+ax[1,0].axhline(y = df_base['u'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[1,0].ticklabel_format(useOffset=False)
 ax[1,0].set_title('Capacity utilization rate ($u$)')
 
-df1['h'].plot(ls ='-', lw=3, color = "darkred", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[1,1])
-df2['h'].plot(ls ='-', lw=3, color = "darkblue", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[1,1])
-df3['h'].plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[1,1])
+df1['h'].plot(ls ='-', lw=3, color = "black", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[1,1])
+df2['h'].plot(ls ='-', lw=3, color = "darkgray", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[1,1])
+df3['h'].plot(ls ='-', lw=3, color = "gray", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[1,1])
 #df3b['h'].plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Downarrow r_m$ (Shock 3)", ax = ax[1,1])
-ax[1,1].axhline(y = df_base['h'].iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+ax[1,1].axhline(y = df_base['h'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[1,1].ticklabel_format(useOffset=False)
 ax[1,1].set_title('Marginal propsenty\nto invest ($h$)')
 
@@ -807,12 +807,12 @@ fig.savefig("./figs/Compared_Shocks_1.png", dpi = 600)
 
 #+RESULTS:
 :results:
-# Out [85]: 
+# Out [8]: 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/15876501d4fb0c8efcf4bc821ddd2c951d7f7948.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/18b0c8cbe7c29cd50a6661a0130aefa3cfb0fa7d.png]]
 :end:
 
 *** Figure 2
@@ -830,38 +830,38 @@ df3["TIME"] = [i+1 for i in range(len(df3.index))]
 
 fig, ax = plt.subplots(2,2, figsize=(2*8,2*5))
 
-sns.scatterplot(y = 'Z/Y', x='u', data=df1, size="TIME", sizes = (1,100), color = 'darkred', legend=False, ax=ax[0,0])
-sns.scatterplot(y = 'Z/Y', x='u', data=df2, size="TIME", sizes = (1,100), color = 'darkblue', legend=False, ax=ax[0,0])
-sns.scatterplot(y = 'Z/Y', x='u', data=df3, size="TIME", sizes = (1,100), color = 'darkgreen', legend=False, ax=ax[0,0])
-#sns.scatterplot(y = 'Z/Y', x='u', data=df3b, size="TIME", sizes = (1,100), color = 'darkgreen', legend=False, ax=ax[0,0])
+sns.scatterplot(y = 'Z/Y', x='u', data=df1, size="TIME", sizes = (1,100), color = 'black', legend=False, ax=ax[0,0])
+sns.scatterplot(y = 'Z/Y', x='u', data=df2, size="TIME", sizes = (1,100), color = 'darkgray', legend=False, ax=ax[0,0])
+sns.scatterplot(y = 'Z/Y', x='u', data=df3, size="TIME", sizes = (1,100), color = 'gray', legend=False, ax=ax[0,0])
+#sns.scatterplot(y = 'Z/Y', x='u', data=df3b, size="TIME", sizes = (1,100), color = 'gray', legend=False, ax=ax[0,0])
 
-sns.lineplot(y = 'Z/Y', x='u', data=df1, sort=False, color = 'darkred', ax=ax[0,0])
-sns.lineplot(y = 'Z/Y', x='u', data=df2, sort=False, color = 'darkblue', ax=ax[0,0])
-sns.lineplot(y = 'Z/Y', x='u', data=df3, sort=False, color = 'darkgreen', ax=ax[0,0])
-#sns.lineplot(y = 'Z/Y', x='u', data=df3b, sort=False, color = 'darkgreen', ax=ax[0,0])
+sns.lineplot(y = 'Z/Y', x='u', data=df1, sort=False, color = 'black', ax=ax[0,0])
+sns.lineplot(y = 'Z/Y', x='u', data=df2, sort=False, color = 'darkgray', ax=ax[0,0])
+sns.lineplot(y = 'Z/Y', x='u', data=df3, sort=False, color = 'gray', ax=ax[0,0])
+#sns.lineplot(y = 'Z/Y', x='u', data=df3b, sort=False, color = 'gray', ax=ax[0,0])
 ax[0,0].set_title('Share of residential investment and capacity utilization\n(Dots size grow in time)')
 
-df1['K_k'].plot(ls ='-', lw=3, color = "darkred", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[0,1])
-df2['K_k'].plot(ls ='-', lw=3, color = "darkblue", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[0,1])
-df3['K_k'].plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[0,1])
-#df3b['K_k'].plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Downarrow r_m$ (Shock 3)", ax = ax[0,1])
-ax[0,1].axhline(y = df_base['K_k'].iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+df1['K_k'].plot(ls ='-', lw=3, color = "black", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[0,1])
+df2['K_k'].plot(ls ='-', lw=3, color = "darkgray", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[0,1])
+df3['K_k'].plot(ls ='-', lw=3, color = "gray", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[0,1])
+#df3b['K_k'].plot(ls ='-', lw=3, color = "gray", label = "$\\Downarrow r_m$ (Shock 3)", ax = ax[0,1])
+ax[0,1].axhline(y = df_base['K_k'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[0,1].ticklabel_format(useOffset=False)
 ax[0,1].set_title('Houses share on\nReal Assets ($K_k$)')
 
-((df1["DN"][1:]*df1["rm"][2:])/df1['YDk'][2:]).plot(ls ='-', lw=3, color = "darkred", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[1,0])
-((df2["DN"][1:]*df2["rm"][2:])/df2['YDk'][2:]).plot(ls ='-', lw=3, color = "darkblue", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[1,0])
-((df3["DN"]*df3["rm"])[1:]/df3['YDk'][1:]).plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[1,0])
-#((df3b["MO"]*df3b["rmo"][1:] + df3b["Lk"]*df3b["rl"][1:] - df3b["M"]*df3b["rl"][1:])/df3b['YDk'][1:]).plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[1,0])
-ax[1,0].axhline(y = ((df_base["DN"].iloc[-1]*df_base["rm"].iloc[-1])/df_base['YDk'].iloc[-1]), ls ='--', lw=1.5, color = "black", label = "Baseline")
+((df1["DN"][1:]*df1["rm"][2:])/df1['YDk'][2:]).plot(ls ='-', lw=3, color = "black", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[1,0])
+((df2["DN"][1:]*df2["rm"][2:])/df2['YDk'][2:]).plot(ls ='-', lw=3, color = "darkgray", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[1,0])
+((df3["DN"]*df3["rm"])[1:]/df3['YDk'][1:]).plot(ls ='-', lw=3, color = "gray", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[1,0])
+#((df3b["MO"]*df3b["rmo"][1:] + df3b["Lk"]*df3b["rl"][1:] - df3b["M"]*df3b["rl"][1:])/df3b['YDk'][1:]).plot(ls ='-', lw=3, color = "gray", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[1,0])
+ax[1,0].axhline(y = ((df_base["DN"].iloc[-1]*df_base["rm"].iloc[-1])/df_base['YDk'].iloc[-1]), ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[1,0].ticklabel_format(useOffset=False)
 ax[1,0].set_title('Capitalist Indebtedness\n(as % $YD_k$)')
 
-(df1['Fn']/df1['K_f']).plot(ls ='-', lw=3, color = "darkred", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[1,1])
-(df2['Fn']/df2['K_f']).plot(ls ='-', lw=3, color = "darkblue", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[1,1])
-(df3['Fn']/df3['K_f']).plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[1,1])
-#(df3b['Fn']/df3b['K_f']).plot(ls ='-', lw=3, color = "darkgreen", label = "$\\Downarrow r_m$ (Shock 3)", ax = ax[1,1])
-ax[1,1].axhline(y = (df_base['Fn']/df_base['K_f']).iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+(df1['Fn']/df1['K_f']).plot(ls ='-', lw=3, color = "black", label = "$\\Downarrow \omega$ (Shock 1)", ax = ax[1,1])
+(df2['Fn']/df2['K_f']).plot(ls ='-', lw=3, color = "darkgray", label = "$\\Uparrow \pi$ (Shock 2)", ax = ax[1,1])
+(df3['Fn']/df3['K_f']).plot(ls ='-', lw=3, color = "gray", label = "$\\Uparrow r_m$ (Shock 3)", ax = ax[1,1])
+#(df3b['Fn']/df3b['K_f']).plot(ls ='-', lw=3, color = "gray", label = "$\\Downarrow r_m$ (Shock 3)", ax = ax[1,1])
+ax[1,1].axhline(y = (df_base['Fn']/df_base['K_f']).iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[1,1].ticklabel_format(useOffset=False)
 ax[1,1].set_title('Net profit rate')
 
@@ -874,12 +874,12 @@ fig.savefig("./figs/Compared_Shocks_2.png", dpi = 600)
 
 #+RESULTS:
 :results:
-# Out [86]: 
+# Out [9]: 
 # text/plain
 : <Figure size 1152x720 with 4 Axes>
 
 # image/png
-[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/f8a4fc23c5da45e5ffca88c18bebcd43dc3b12c6.png]]
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/9d76da24dcc3a852861596ab3fccad11659e5d51.png]]
 :end:
 
 
@@ -923,7 +923,7 @@ shock["Z/Y"] = shock["Z"]/shock["Y"]
 
 #+RESULTS:
 :results:
-# Out [87]: 
+# Out [10]: 
 :end:
 
 #+BEGIN_SRC ipython :tangle ./codes/Simulation.py :cache no
@@ -937,29 +937,29 @@ shock["TIME"] = [i+1 for i in range(len(shock.index))]
 # First shock
 fig, ax = plt.subplots(2,2, figsize=(2*8,2*5))
 
-shock[['Y', 'I_h', 'I_f']].pct_change().plot(ls ='-', lw=3, ax = ax[0,0])
-ax[0,0].axhline(y = df_base['g_Z'].iloc[-1], ls ='--', lw=1, color = "black", label = "Baseline")
+shock[['Y', 'I_h', 'I_f']].pct_change().plot(ls ='-', lw=3, ax = ax[0,0], color=("black", "darkgray", "gray"))
+ax[0,0].axhline(y = df_base['g_Z'].iloc[-1], ls ='--', lw=1, color = "lightgray", label = "Baseline")
 ax[0,0].ticklabel_format(useOffset=False)
 ax[0,0].set_title('Selected growth rates')
 
-shock['Z/Y'].plot(ls ='-', lw=3, color = "darkred", label = "Real data", ax = ax[0,1])
-ax[1,0].axhline(y = df_base['Z/Y'].iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+shock['Z/Y'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[0,1])
+ax[1,0].axhline(y = df_base['Z/Y'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[1,0].ticklabel_format(useOffset=False)
 ax[1,0].set_title('Autonomous Expenditure\nShare on GDP ($Z/Y$)')
 
-shock['u'].plot(ls ='-', lw=3, color = "darkred", label = "Real data", ax = ax[1,0])
-ax[0,1].axhline(y = df_base['u'].iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+shock['u'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,0])
+ax[0,1].axhline(y = df_base['u'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[0,1].ticklabel_format(useOffset=False)
 ax[0,1].set_title('Capacity utilization rate ($u$)')
 
-#shock['h'].plot(ls ='-', lw=3, color = "darkred", label = "Real data", ax = ax[1,1])
-#ax[1,1].axhline(y = df_base['h'].iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+#shock['h'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,1])
+#ax[1,1].axhline(y = df_base['h'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 #ax[1,1].ticklabel_format(useOffset=False)
 #ax[1,1].set_title('Marginal propsenty\nto invest ($h$)')
 
-sns.scatterplot(y = 'Z/Y', x='u', data=shock, size="TIME", sizes = (1,100), color = 'darkred', legend=False, ax=ax[1,1])
+sns.scatterplot(y = 'Z/Y', x='u', data=shock, size="TIME", sizes = (1,100), color = 'black', legend=False, ax=ax[1,1])
 
-sns.lineplot(y = 'Z/Y', x='u', data=shock, sort=False, color = 'darkred', ax=ax[1,1])
+sns.lineplot(y = 'Z/Y', x='u', data=shock, sort=False, color = 'black', ax=ax[1,1])
 ax[1,1].set_title('Share of residential investment and capacity utilization\n(Dots size grow in time)')
 
 
@@ -974,23 +974,23 @@ fig.savefig("./figs/Real_Shocks_1.png", dpi = 600)
 # Second Shock
 fig, ax = plt.subplots(2,2, figsize=(2*8,2*5))
 
-sns.scatterplot(y = 'Z/Y', x='u', data=shock, size="TIME", sizes = (1,100), color = 'darkred', legend=False, ax=ax[0,0])
+sns.scatterplot(y = 'Z/Y', x='u', data=shock, size="TIME", sizes = (1,100), color = 'black', legend=False, ax=ax[0,0])
 
-sns.lineplot(y = 'Z/Y', x='u', data=shock, sort=False, color = 'darkred', ax=ax[0,0])
+sns.lineplot(y = 'Z/Y', x='u', data=shock, sort=False, color = 'black', ax=ax[0,0])
 ax[0,0].set_title('Share of residential investment and capacity utilization\n(Dots size grow in time)')
 
-shock['K_k'].plot(ls ='-', lw=3, color = "darkred", label = "Real data", ax = ax[0,1])
-ax[0,1].axhline(y = df_base['K_k'].iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+shock['K_k'].plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[0,1])
+ax[0,1].axhline(y = df_base['K_k'].iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[0,1].ticklabel_format(useOffset=False)
 ax[0,1].set_title('Houses share on\nReal Assets ($K_k$)')
 
-((shock["DN"]*shock["rm"][2:])/shock['YDk'][2:]).plot(ls ='-', lw=3, color = "darkred", label = "Real data", ax = ax[1,0])
-ax[1,0].axhline(y = ((df_base["DN"].iloc[-2]*df_base["rm"].iloc[-1])/df_base['YDk'].iloc[-1]), ls ='--', lw=1.5, color = "black", label = "Baseline")
+((shock["DN"]*shock["rm"][2:])/shock['YDk'][2:]).plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,0])
+ax[1,0].axhline(y = ((df_base["DN"].iloc[-2]*df_base["rm"].iloc[-1])/df_base['YDk'].iloc[-1]), ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[1,0].ticklabel_format(useOffset=False)
 ax[1,0].set_title('Capitalist Indebtedness\n(as % $YD_k$)')
 
-(shock['Fn']/shock['K_f']).plot(ls ='-', lw=3, color = "darkred", label = "Real data", ax = ax[1,1])
-ax[1,1].axhline(y = (df_base['Fn']/df_base['K_f']).iloc[-1], ls ='--', lw=1.5, color = "black", label = "Baseline")
+(shock['Fn']/shock['K_f']).plot(ls ='-', lw=3, color = "black", label = "Real data", ax = ax[1,1])
+ax[1,1].axhline(y = (df_base['Fn']/df_base['K_f']).iloc[-1], ls ='--', lw=1.5, color = "lightgray", label = "Baseline")
 ax[1,1].ticklabel_format(useOffset=False)
 ax[1,1].set_title('Net profit rate')
 
@@ -1003,7 +1003,21 @@ fig.savefig("./figs/Real_Shocks_2.png", dpi = 600)
 
 #+RESULTS:
 :results:
-61 - a375fa88-f385-4f04-b596-f87147788930 <output> <interrupt>
+# Out [12]: 
+# output
+No handles with labels found to put in legend.
+
+# text/plain
+: <Figure size 1152x720 with 4 Axes>
+
+# image/png
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/63cb530ab5fe71fd2330ddd697a976cae23e7716.png]]
+
+# text/plain
+: <Figure size 1152x720 with 4 Axes>
+
+# image/png
+[[file:obipy-resources/12e1327ee496c904bd31f7ced3f8f1d5d336a129/25ce783e06bec21dfd8b21ad50da497dd93a470a.png]]
 :end:
 
 
