--- a/Articles/SFC/Versoes/Historico.org
+++ b/Articles/SFC/Versoes/Historico.org
@@ -55,3 +55,13 @@ Talvez essa tabela mude na medida que forem usados outros valores dos parâmetro
 ** Apêndice C (em construção)
 
 Eu tinha iniciado (faz um tempo) um código para retornar uma tabela de análise de sensibilidade similar à do Fazzari. Esse é um código que leva um certo tempo para rodar porque faço vários /nested for loops/ (a.k.a simulo um porrilhão de cenários rs). No final das contas acabei deixando de lado. Havendo tempo, penso em retornar a isso. Imagino que se desse certo, seria bastante interessante mas também acho que não esta entre as nossas prioridades. Talvez pudesse trabalhar nisso enquanto o artigo estivesse sendo revisado na expectativa de que algum parecerista peça. Por fim, esse apêndice inexistente é um dos motivos de ter tantos /hashs/ ("lixos") no fim do apêndice B.
+
+* Versão <2020-10-29 qui>
+
+** Seção empíricas
+
+- Gráficos foram adaptados para escala de cinza
+
+** Simulações
+
+- Gráficos foram adaptados para escala de cinza
