--- a/Readings/ABM.bib
+++ b/Readings/ABM.bib
@@ -10,6 +10,10 @@
 
 
 
+
+
+
+
 @Article{Macal_2010,
   author       = {Macal, C M and North, M J},
   title	       = {Tutorial on agent-based modelling and simulation},
@@ -23,6 +27,64 @@
   url	       = {http://dx.doi.org/10.1057/jos.2010.3},
   journal      = {Journal of Simulation},
   publisher    = {Informa UK Limited}
+}
+
+
+
+
+
+@Article{Bianchi_2007,
+  author       = {Bianchi, Carlo and Cirillo, Pasquale and Gallegati, Mauro and Vagliasindi, Pietro A.},
+  title	       = {Validating and Calibrating Agent-Based Models: A Case Study},
+  year	       = {2007},
+  volume       = {30},
+  number       = {3},
+  month	       = {Jul},
+  pages	       = {245–264},
+  issn	       = {1572-9974},
+  doi	       = {10.1007/s10614-007-9097-z},
+  url	       = {http://dx.doi.org/10.1007/s10614-007-9097-z},
+  journal      = {Computational Economics},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
+@Article{Fagiolo_2007,
+  author       = {Fagiolo, Giorgio and Moneta, Alessio and Windrum,
+                  Paul},
+  title	       = {A Critical Guide to Empirical Validation of
+                  Agent-Based Models in Economics: Methodologies,
+                  Procedures, and Open Problems},
+  year	       = 2007,
+  volume       = 30,
+  number       = 3,
+  month	       = {Sep},
+  pages	       = {195–226},
+  issn	       = {1572-9974},
+  doi	       = {10.1007/s10614-007-9104-4},
+  url	       = {http://dx.doi.org/10.1007/s10614-007-9104-4},
+  journal      = {Computational Economics},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
+
+
+@Article{M_ller_2014,
+  author       = {Müller, Birgit and Balbi, Stefano and Buchmann,
+                  Carsten M. and de Sousa, Luís and Dressler, Gunnar
+                  and Groeneveld, Jürgen and Klassert, Christian
+                  J. and Le, Quang Bao and Millington, James D.A. and
+                  Nolzen, Henning and et al.},
+  title	       = {Standardised and transparent model descriptions for
+                  agent-based models: Current status and prospects},
+  year	       = 2014,
+  volume       = 55,
+  month	       = {May},
+  pages	       = {156–163},
+  issn	       = {1364-8152},
+  doi	       = {10.1016/j.envsoft.2014.01.029},
+  url	       = {http://dx.doi.org/10.1016/j.envsoft.2014.01.029},
+  journal      = {Environmental Modelling & Software},
+  publisher    = {Elsevier BV}
 }
 
 @Article{Haldane_2018,
@@ -53,4 +115,179 @@
   journal      = {Eastern Economic Journal},
   publisher    = {Springer Science and Business Media LLC}
 }
+
+
+
+@Article{D_Orazio_2019,
+  author       = {D’Orazio, Paola},
+  title	       = {Income inequality, consumer debt, and prudential
+                  regulation: An agent-based approach to study the
+                  emergence of crises and financial instability},
+  year	       = 2019,
+  volume       = 82,
+  month	       = {Nov},
+  pages	       = {308–331},
+  issn	       = {0264-9993},
+  doi	       = {10.1016/j.econmod.2019.01.015},
+  url	       = {http://dx.doi.org/10.1016/j.econmod.2019.01.015},
+  journal      = {Economic Modelling},
+  publisher    = {Elsevier BV}
+}
+
+
+
+@Article{Llacay_2019,
+  author       = {Llacay, Barbara and Peffer, Gilbert},
+  title	       = {Impact of Basel III Countercyclical Measures on Financial Stability: An Agent-Based Model},
+  year	       = {2019},
+  volume       = {22},
+  number       = {1},
+  issn	       = {1460-7425},
+  doi	       = {10.18564/jasss.3927},
+  url	       = {http://dx.doi.org/10.18564/jasss.3927},
+  journal      = {Journal of Artificial Societies and Social
+                  Simulation},
+  publisher    = {Journal of Artificial Societies and Social
+                  Simulation}
+}
+
+@Article{Cuenda_2018,
+  author       = {Cuenda, Sara and Fernández, Maximiliano and Galeano,
+                  Javier and Capitán, José A.},
+  title	       = {A Minimal Agent-Based Model Reproduces the Overall
+                  Topology of Interbank Networks},
+  year	       = 2018,
+  volume       = 21,
+  number       = 1,
+  issn	       = {1460-7425},
+  doi	       = {10.18564/jasss.3562},
+  url	       = {http://dx.doi.org/10.18564/jasss.3562},
+  journal      = {Journal of Artificial Societies and Social
+                  Simulation},
+  publisher    = {Journal of Artificial Societies and Social
+                  Simulation}
+}
+
+
+
+
+
+@Article{Geanakoplos_2012,
+  author       = {Geanakoplos, John and Axtell, Robert and Farmer,
+                  J. Doyne and Howitt, Peter and Conlee, Benjamin and
+                  Goldstein, Jonathan and Hendrey, Matthew and Palmer,
+                  Nathan M. and Yang, Chun-Yi},
+  title	       = {Getting at Systemic Risk Via an Agent-Based Model of
+                  the Housing Market},
+  year	       = 2012,
+  issn	       = {1556-5068},
+  doi	       = {10.2139/ssrn.2018375},
+  url	       = {http://dx.doi.org/10.2139/ssrn.2018375},
+  journal      = {SSRN Electronic Journal},
+  publisher    = {Elsevier BV}
+}
+
+
+
+
+
+@Article{_zba__2014,
+  author       = {Özbaş, Birnur and Özgün, Onur and Barlas, Yaman},
+  title	       = {Modeling and Simulation of the Endogenous Dynamics
+                  of Housing Market Cycles},
+  year	       = 2014,
+  volume       = 17,
+  number       = 1,
+  issn	       = {1460-7425},
+  doi	       = {10.18564/jasss.2353},
+  url	       = {http://dx.doi.org/10.18564/jasss.2353},
+  journal      = {Journal of Artificial Societies and Social
+                  Simulation},
+  publisher    = {Journal of Artificial Societies and Social
+                  Simulation}
+}
+
+@Article{Baptista_2016,
+  author       = {Baptista, Rafa and Hinterschweiger, Marc and Low,
+                  Katie and Uluc, Arzu},
+  title	       = {Macroprudential Policy in an Agent-Based Model of
+                  the UK Housing Market},
+  year	       = 2016,
+  issn	       = {1556-5068},
+  doi	       = {10.2139/ssrn.2850414},
+  url	       = {http://dx.doi.org/10.2139/ssrn.2850414},
+  journal      = {SSRN Electronic Journal},
+  publisher    = {Elsevier BV}
+}
+
+@article{filatova_land_2009,
+   title = {Agent-Based Urban Land Markets: Agent\'s Pricing Behavior, Land Prices and Urban Land Use Change},
+   author = {Filatova, Tatiana and Parker, Dawn and van der Veen, Anne},
+   journal = {Journal of Artificial Societies and Social Simulation},
+   ISSN = {1460-7425},
+   volume = {12},
+   number = {1},
+   pages = {3},
+   year = {2009},
+   URL = {http://jasss.soc.surrey.ac.uk/12/1/3.html},
+   keywords = {Location Choice, Urban Land Market, Agent-Based Computational Economics, Land Use, Land Rent Gradient, Spatial Simulation}
+}
+
+@Article{Ozel_2019,
+  author       = {Ozel, Bulent and Nathanael, Reynold Christian and
+                  Raberto, Marco and Teglio, Andrea and Cincotti,
+                  Silvano},
+  title	       = {Macroeconomic implications of mortgage loan
+                  requirements: an agent-based approach},
+  year	       = 2019,
+  volume       = 14,
+  number       = 1,
+  month	       = {Feb},
+  pages	       = {7–46},
+  issn	       = {1860-7128},
+  doi	       = {10.1007/s11403-019-00238-5},
+  url	       = {http://dx.doi.org/10.1007/s11403-019-00238-5},
+  journal      = {Journal of Economic Interaction and Coordination},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
+@Article{Laliotis_2020,
+  author       = {Laliotis, Dimitrios and Buesa, Alejandro and Leber,
+                  Miha and Población, Javier},
+  title	       = {An agent-based model for the assessment of LTV caps},
+  year	       = 2020,
+  volume       = 20,
+  number       = 10,
+  month	       = {Apr},
+  pages	       = {1721–1748},
+  issn	       = {1469-7696},
+  doi	       = {10.1080/14697688.2020.1733058},
+  url	       = {http://dx.doi.org/10.1080/14697688.2020.1733058},
+  journal      = {Quantitative Finance},
+  publisher    = {Informa UK Limited}
+}
+
+
+
+@INPROCEEDINGS{Lebaron02buildingthe,
+    author = {Blake Lebaron},
+    title = {Building the santa fe artificial stock market. Working Paper, Graduate},
+    booktitle = {School of International Economics and Finance, Brandeis},
+    year = {2002},
+    pages = {1117--1147}
+}
+
+@Article{Arthur_1997,
+  author       = {Arthur, W. Brian and Holland, John H. and LeBaron,
+                  Blake D. and Palmer, Richard G. and Tayler, Paul},
+  title	       = {Asset Pricing Under Endogenous Expectations in an
+                  Artificial Stock Market},
+  year	       = 1997,
+  issn	       = {1556-5068},
+  doi	       = {10.2139/ssrn.2252},
+  url	       = {http://dx.doi.org/10.2139/ssrn.2252},
+  journal      = {SSRN Electronic Journal},
+  publisher    = {Elsevier BV}
+}
+
 
