--- a/Readings/Mortgaging.org
+++ b/Readings/Mortgaging.org
@@ -561,7 +561,22 @@
    #+END_SRC
 
 * [#A] Mortgage Market (Comparative)
-** READ [#C] [[https://www.jstor.org/stable/24825878?seq=1][Wachter - The limits of the housing finance system]
+** READ [#A] [[https://openknowledge.worldbank.org/bitstream/handle/10986/4154/WPS4943.pdfLink][Beck et al - Financial Institutions and Markets across Countries and over Time]]
+   :PROPERTIES:
+   :YEAR:     2009
+   :ZOTERO:   Yes
+   :TYPE:     Thechnical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+
+   #+END_SRC
+
+** READ [#C] [[https://www.jstor.org/stable/24825878?seq=1][Wachter - The limits of the housing finance system]]
    :PROPERTIES:
    :YEAR:     1990
    :ZOTERO:   Entry
@@ -591,7 +606,7 @@
 
    #+END_SRC
 
-** READ [#A] [[https://academic.oup.com/ser/advance-article/doi/10.1093/ser/mwaa030/5913145][Kohl - Too much mortgage debt? The effectof housing financialization on housingsupply and residential capital formation]]
+** READ [#A] [[https://academic.oup.com/ser/advance-article/doi/10.1093/ser/mwaa030/5913145][Kohl - Too much mortgage debt? The effectof housing financialization on housing supply and residential capital formation]]
    :PROPERTIES:
    :YEAR:     2020
    :ZOTERO:   Yes
@@ -857,7 +872,7 @@
 }
 #+END_SRC
 
-** READ [#A] [[https://www.econstor.eu/bitstream/10419/155335/1/880367393.pdf][Blackwell and Khol - Varieties of housing finance in historical perspective: The impact of mortgage finance systems on urban structures and homeownership]]
+** READ [#C] [[https://www.econstor.eu/bitstream/10419/155335/1/880367393.pdf][Blackwell and Khol - Varieties of housing finance in historical perspective: The impact of mortgage finance systems on urban structures and homeownership]]
    :PROPERTIES:
    :YEAR:     2017
    :ZOTERO:   Yes
@@ -870,6 +885,36 @@
 
    #+BEGIN_SRC bibtex
 
+   #+END_SRC
+
+** READ [#A] [[https://www.tandfonline.com/doi/abs/10.1080/09692290.2017.1403358?journalCode=rrip20][Blackwell and Khol - The origins of national housing finance systems: a comparative investigation into historical variations in mortgage finance regimes]]
+   :PROPERTIES:
+   :YEAR:     2017
+   :ZOTERO:   Yes
+   :TYPE:     Theory
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Yes
+   :END:
+
+   #+BEGIN_SRC bibtex
+@Article{Blackwell_2017,
+  author       = {Blackwell, Timothy and Kohl, Sebastian},
+  title	       = {The origins of national housing finance systems: a
+                  comparative investigation into historical variations
+                  in mortgage finance regimes},
+  year	       = 2017,
+  volume       = 25,
+  number       = 1,
+  month	       = {Dec},
+  pages	       = {49–74},
+  issn	       = {1466-4526},
+  doi	       = {10.1080/09692290.2017.1403358},
+  url	       = {http://dx.doi.org/10.1080/09692290.2017.1403358},
+  journal      = {Review of International Political Economy},
+  publisher    = {Informa UK Limited}
+}
    #+END_SRC
 
 * [#A] House prices (Comparative)
@@ -1084,6 +1129,38 @@
   publisher    = {Informa UK Limited}
 }
 #+END_SRC
+
+* [#A] Empirical 
+
+** READ [#A] [[https://journals.sagepub.com/doi/abs/10.1177/0032329218755750][Kohl - More Mortgages, More Homes? The Effect of Housing Financialization on Homeownership in Historical Perspective]]
+   :PROPERTIES:
+   :YEAR:     2018
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Yes
+   :END:
+
+   #+BEGIN_SRC bibtex
+@Article{Kohl_Financialization_2018,
+  author       = {Kohl, Sebastian},
+  title	       = {More Mortgages, More Homes? The Effect of Housing
+                  Financialization on Homeownership in Historical
+                  Perspective},
+  year	       = 2018,
+  volume       = 46,
+  number       = 2,
+  month	       = {Jan},
+  pages	       = {177–203},
+  issn	       = {1552-7514},
+  doi	       = {10.1177/0032329218755750},
+  url	       = {http://dx.doi.org/10.1177/0032329218755750},
+  journal      = {Politics & Society},
+  publisher    = {SAGE Publications}
+}
+   #+END_SRC
 
 * [#A] Data 
 ** SKIM [#C] [[https://www.researchgate.net/publication/242741878_Contrasting_Real_Estate_with_Comparable_Investments_1978_to_2008][Francis and Ibbotson - Contrasting Real Estate with Comparable Investments, 1978 to 2008]]
