--- a/Readings/NewNarative.bib
+++ b/Readings/NewNarative.bib
@@ -1,3 +1,32 @@
+@Article{Mian_Credit_2009,
+  author       = {Mian, Atif and Sufi, Amir},
+  title	       = {The Consequences of Mortgage Credit Expansion:
+                  Evidence from the U.S. Mortgage Default Crisis*},
+  year	       = {2009},
+  volume       = {124},
+  number       = {4},
+  month	       = {Nov},
+  pages	       = {1449–1496},
+  doi	       = {10.1162/qjec.2009.124.4.1449},
+  url	       = {http://dx.doi.org/10.1162/qjec.2009.124.4.1449},
+  journal      = {Quarterly Journal of Economics},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+@Article{Mian_House_2011,
+  author       = {Mian, Atif and Sufi, Amir},
+  title	       = {House Prices, Home Equity–Based Borrowing, and the US Household Leverage Crisis},
+  year	       = {2011},
+  volume       = {101},
+  number       = {5},
+  month	       = {Aug},
+  pages	       = {2132–2156},
+  doi	       = {10.1257/aer.101.5.2132},
+  url	       = {http://dx.doi.org/10.1257/aer.101.5.2132},
+  journal      = {American Economic Review},
+  publisher    = {American Economic Association}
+}
+
 @Article{Levitin_Bubble_2012,
   author       = {Levitin, Adam J. and Wachter, Susan M.},
   title	       = {Explaining the Housing Bubble},
@@ -7,4 +36,168 @@
   url	       = {http://dx.doi.org/10.2139/ssrn.1669401},
   journal      = {SSRN Electronic Journal},
   publisher    = {Elsevier BV}
+}
+
+@Article{DiMaggio_Regulatory_2017,
+  author       = {Di Maggio, Marco and Kermani, Amir},
+  title	       = {Credit-Induced Boom and Bust},
+  year	       = {2017},
+  volume       = {30},
+  number       = {11},
+  month	       = {Jun},
+  pages	       = {3711–3758},
+  doi	       = {10.1093/rfs/hhx056},
+  url	       = {http://dx.doi.org/10.1093/rfs/hhx056},
+  journal      = {The Review of Financial Studies},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+@Article{Fligstein_Joneses_2017,
+  author       = {Fligstein, Neil and Hastings, Orestes P. and Goldstein, Adam},
+  title	       = {Keeping up with the Joneses: How Households Fared in the Era of High Income Inequality and the Housing Price Bubble, 1999–2007},
+  year	       = {2017},
+  volume       = {3},
+  month	       = {Aug},
+  doi	       = {10.1177/2378023117722330},
+  url	       = {http://dx.doi.org/10.1177/2378023117722330},
+  journal      = {Socius: Sociological Research for a Dynamic World},
+  publisher    = {SAGE Publications}
+}
+
+@Article{Coibion_Inequality_2014,
+  author       = {Coibion, Olivier and Gorodnichenko, Yuriy and Kudlyak, Marianna and Mondragon, John},
+  title	       = {Does Greater Inequality Lead to More Household Borrowing? New Evidence from Household Data},
+  year	       = {2014},
+  month	       = {Jan},
+  doi	       = {10.3386/w19850},
+  url	       = {http://dx.doi.org/10.3386/w19850},
+  publisher    = {National Bureau of Economic Research}
+}
+
+@Article{Stefani_2020,
+  author       = {Stefani, Alessia De},
+  title	       = {Debt, inequality and house prices: Explaining the dynamics of household borrowing prior to the great recession},
+  year	       = {2020},
+  volume       = {47},
+  month	       = {Mar},
+  doi	       = {10.1016/j.jhe.2018.09.001},
+  url	       = {http://dx.doi.org/10.1016/j.jhe.2018.09.001},
+  journal      = {Journal of Housing Economics},
+  publisher    = {Elsevier BV}
+}
+
+@Article{Cloyne_Borrowing_2019,
+  author       = {Cloyne, James and Huber, Kilian and Ilzetzki, Ethan and Kleven, Henrik},
+  title	       = {The Effect of House Prices on Household Borrowing: A New Approach},
+  year	       = {2019},
+  volume       = {109},
+  number       = {6},
+  month	       = {Jun},
+  pages	       = {2104–2136},
+  doi	       = {10.1257/aer.20180086},
+  url	       = {http://dx.doi.org/10.1257/aer.20180086},
+  journal      = {American Economic Review},
+  publisher    = {American Economic Association}
+}
+
+@Article{De_Stefani_2020,
+  author       = {De Stefani, Alessia},
+  title	       = {House price history, biased expectations, and credit
+                  cycles: The role of housing investors},
+  year	       = 2020,
+  month	       = {Jul},
+  issn	       = {1540-6229},
+  doi	       = {10.1111/1540-6229.12328},
+  url	       = {http://dx.doi.org/10.1111/1540-6229.12328},
+  journal      = {Real Estate Economics},
+  publisher    = {Wiley}
+}
+
+@Article{Adelino_Defaults_2016,
+  author       = {Adelino, Manuel and Schoar, Antoinette and Severino, Felipe},
+  title	       = {Loan Originations and Defaults in the Mortgage Crisis: The Role of the Middle Class},
+  year	       = {2016},
+  volume       = {29},
+  number       = {7},
+  month	       = {Mar},
+  pages	       = {1635–1670},
+  issn	       = {1465-7368},
+  doi	       = {10.1093/rfs/hhw018},
+  url	       = {http://dx.doi.org/10.1093/rfs/hhw018},
+  journal      = {Review of Financial Studies},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+@Article{Adelino_Housing_2018,
+  author       = {Adelino, Manuel and Schoar, Antoinette and Severino, Felipe},
+  title	       = {The Role of Housing and Mortgage Markets in the Financial Crisis},
+  year	       = {2018},
+  volume       = {10},
+  number       = {1},
+  month	       = {Nov},
+  pages	       = {25–41},
+  issn	       = {1941-1375},
+  doi	       = {10.1146/annurev-financial-110217-023036},
+  url	       = {http://dx.doi.org/10.1146/annurev-financial-110217-023036},
+  journal      = {Annual Review of Financial Economics},
+  publisher    = {Annual Reviews}
+}
+
+@Article{Foote_Implications_2016,
+  author       = {Foote, Christopher and Loewenstein, Lara and Willen, Paul},
+  title	       = {Cross-Sectional Patterns of Mortgage Debt during the Housing Boom: Evidence and Implications},
+  year	       = {2016},
+  month	       = {Dec},
+  doi	       = {10.3386/w22985},
+  url	       = {http://dx.doi.org/10.3386/w22985},
+  publisher    = {National Bureau of Economic Research}
+}
+
+@Article{Bhutta_mortgage_2015,
+  author       = {Bhutta, Neil},
+  title	       = {The ins and outs of mortgage debt during the housing boom and bust},
+  year	       = {2015},
+  volume       = {76},
+  month	       = {Nov},
+  pages	       = {284–298},
+  doi	       = {10.1016/j.jmoneco.2015.02.005},
+  url	       = {http://dx.doi.org/10.1016/j.jmoneco.2015.02.005},
+  journal      = {Journal of Monetary Economics},
+  publisher    = {Elsevier BV}
+}
+
+@Article{Bhutta_Extraction_2016,
+  author       = {Bhutta, Neil and Keys, Benjamin J.},
+  title	       = {Interest Rates and Equity Extraction During the Housing Boom},
+  year	       = {2016},
+  volume       = {106},
+  number       = {7},
+  month	       = {Jul},
+  pages	       = {1742–1774},
+  doi	       = {10.1257/aer.20140040},
+  url	       = {http://dx.doi.org/10.1257/aer.20140040},
+  journal      = {American Economic Review},
+  publisher    = {American Economic Association}
+}
+
+@Article{Guerrieri_Credit_2016,
+  author       = {Guerrieri, V. and Uhlig, H.},
+  title	       = {Housing and Credit Markets},
+  year	       = {2016},
+  pages	       = {1427–1496},
+  doi	       = {10.1016/bs.hesmac.2016.06.001},
+  url	       = {http://dx.doi.org/10.1016/bs.hesmac.2016.06.001},
+  journal      = {Handbook of Macroeconomics},
+  publisher    = {Elsevier}
+}
+
+@Article{Kaplan_2017,
+  author       = {Kaplan, Greg and Mitman, Kurt and Violante,
+                  Giovanni},
+  title	       = {The Housing Boom and Bust: Model Meets Evidence},
+  year	       = {2017},
+  month	       = {Aug},
+  doi	       = {10.3386/w23694},
+  url	       = {http://dx.doi.org/10.3386/w23694},
+  publisher    = {National Bureau of Economic Research}
 }
