--- a/Readings/NewNarative.org
+++ b/Readings/NewNarative.org
@@ -330,6 +330,31 @@
 
 
 * New Narrative associated
+** SKIM [#A] cite:De_Stefani_2020 - [[https://onlinelibrary.wiley.com/doi/abs/10.1111/1540-6229.12328?af=R][House price history, biased expectations, and credit cycles: The role of housing investors]]
+   :PROPERTIES:
+   :YEAR:     2020
+   :ZOTERO:   Entry
+   :TYPE:     Empirical
+   :STATUS:   Filed
+   :RELEVANCE: High
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:
+
+   #+BEGIN_SRC bibtex
+@Article{De_Stefani_2020,
+  author       = {De Stefani, Alessia},
+  title	       = {House price history, biased expectations, and credit
+                  cycles: The role of housing investors},
+  year	       = 2020,
+  month	       = {Jul},
+  issn	       = {1540-6229},
+  doi	       = {10.1111/1540-6229.12328},
+  url	       = {http://dx.doi.org/10.1111/1540-6229.12328},
+  journal      = {Real Estate Economics},
+  publisher    = {Wiley}
+}
+   #+END_SRC
 
 ** SKIM [#A] [[https://academic.oup.com/rfs/article/29/7/1635/2607168][Adelino et al - Loan Originations and Defaults in the Mortgage Crisis: The Role of the Middle Class]]
    :PROPERTIES:
