--- a/Readings/Panel.bib
+++ b/Readings/Panel.bib
@@ -236,6 +236,56 @@
   publisher    = {Wiley}
 }
 
+@Article{Bezemer_2015,
+  author       = {Bezemer, Dirk and Grydaki, Maria and Zhang, Lu},
+  title	       = {MORE MORTGAGES, LOWER GROWTH?},
+  year	       = 2015,
+  volume       = 54,
+  number       = 1,
+  month	       = {Oct},
+  pages	       = {652–674},
+  issn	       = {0095-2583},
+  doi	       = {10.1111/ecin.12254},
+  url	       = {http://dx.doi.org/10.1111/ecin.12254},
+  journal      = {Economic Inquiry},
+  publisher    = {Wiley}
+}
+
+@Article{Arestis_Credit_2014,
+  author       = {Arestis, Philip and González, Ana Rosa},
+  title	       = {Bank credit and the housing market in OECD
+                  countries},
+  year	       = 2014,
+  volume       = 36,
+  number       = 3,
+  month	       = {Apr},
+  pages	       = {467–490},
+  issn	       = {0160-3477},
+  doi	       = {10.2753/pke0160-3477360304},
+  url	       = {http://dx.doi.org/10.2753/PKE0160-3477360304},
+  journal      = {Journal of Post Keynesian Economics},
+  publisher    = {Informa UK Limited}
+}
+
+@Article{Stockhammer_2018,
+  author       = {Stockhammer, Engelbert and Wildauer, Rafael},
+  title	       = {Expenditure Cascades, Low Interest Rates or Property
+                  Booms?  Determinants of Household Debt in OECD
+                  Countries},
+  year	       = 2018,
+  volume       = 5,
+  number       = 2,
+  month	       = {Sep},
+  pages	       = {85–121},
+  issn	       = {2326-6201},
+  doi	       = {10.1561/105.00000083},
+  url	       = {http://dx.doi.org/10.1561/105.00000083},
+  journal      = {Review of Behavioral Economics},
+  publisher    = {Now Publishers}
+}
+
+
+
 @Article{Zinman_2015,
   author       = {Zinman, Jonathan},
   title	       = {Household Debt: Facts, Puzzles, Theories, and
