--- a/Readings/Panel.org
+++ b/Readings/Panel.org
@@ -705,6 +705,150 @@ First, the author estimate the model without property prices and do not find a c
    :CITE:     Yes
    :END:    
 ** Household debt
+*** SKIM [#B] [[https://onlinelibrary.wiley.com/doi/abs/10.1111/ecin.12254Link][Bezemer et al - MORE MORTGAGES, LOWER GROWTH?]]
+    :PROPERTIES:
+    :YEAR:     2015
+    :ZOTERO:   Yes
+    :TYPE:     Empirical
+    :STATUS:   Filed
+    :RELEVANCE: Regular
+    :IMPACT:   Regular
+    :CITE:     Wait
+    :END:
+
+    #+BEGIN_SRC bibtex
+@Article{Bezemer_2015,
+  author       = {Bezemer, Dirk and Grydaki, Maria and Zhang, Lu},
+  title	       = {MORE MORTGAGES, LOWER GROWTH?},
+  year	       = 2015,
+  volume       = 54,
+  number       = 1,
+  month	       = {Oct},
+  pages	       = {652–674},
+  issn	       = {0095-2583},
+  doi	       = {10.1111/ecin.12254},
+  url	       = {http://dx.doi.org/10.1111/ecin.12254},
+  journal      = {Economic Inquiry},
+  publisher    = {Wiley}
+}
+    #+END_SRC
+
+*** READ [#B] [[https://www.tandfonline.com/doi/abs/10.2753/PKE0160-3477360304][Arestis and González - Bank credit and the housing market in OECD countries]]
+    :PROPERTIES:
+    :YEAR:     2014
+    :ZOTERO:   Yes
+    :TYPE:     Empirical
+    :STATUS:   Filed
+    :RELEVANCE: Regular
+    :IMPACT:   Low
+    :CITE:     Wait
+    :END:
+
+    #+BEGIN_SRC bibtex
+@Article{Arestis_Credit_2014,
+  author       = {Arestis, Philip and González, Ana Rosa},
+  title	       = {Bank credit and the housing market in OECD
+                  countries},
+  year	       = 2014,
+  volume       = 36,
+  number       = 3,
+  month	       = {Apr},
+  pages	       = {467–490},
+  issn	       = {0160-3477},
+  doi	       = {10.2753/pke0160-3477360304},
+  url	       = {http://dx.doi.org/10.2753/PKE0160-3477360304},
+  journal      = {Journal of Post Keynesian Economics},
+  publisher    = {Informa UK Limited}
+}
+    #+END_SRC
+
+*** READ [#A] [[https://eprints.kingston.ac.uk/id/eprint/38796/1/2017_003.pdf][Stockhammer and Wildauer - Expenditure Cascades, Low Interest Rates or Property Booms? Determinants of Household Debt in OECD Countries]]
+    :PROPERTIES:
+    :YEAR:     2018
+    :ZOTERO:   Yes
+    :TYPE:     Empirical
+    :STATUS:   Filed
+    :RELEVANCE: High
+    :IMPACT:   Regular
+    :CITE:     Yes
+    :END:
+
+    #+BEGIN_SRC bibtex
+@Article{Stockhammer_2018,
+  author       = {Stockhammer, Engelbert and Wildauer, Rafael},
+  title	       = {Expenditure Cascades, Low Interest Rates or Property
+                  Booms?  Determinants of Household Debt in OECD
+                  Countries},
+  year	       = 2018,
+  volume       = 5,
+  number       = 2,
+  month	       = {Sep},
+  pages	       = {85–121},
+  issn	       = {2326-6201},
+  doi	       = {10.1561/105.00000083},
+  url	       = {http://dx.doi.org/10.1561/105.00000083},
+  journal      = {Review of Behavioral Economics},
+  publisher    = {Now Publishers}
+}
+
+
+    #+END_SRC
+
+*** REPORT [#A] [[https://www.postkeynesian.net/working-papers/2005/][Wood and Stockhammer - House prices, private debt and the macroeconomics of comparative political economy]]
+    CLOSED: [2020-10-21 qua 10:49]
+    :PROPERTIES:
+    :YEAR:     2020
+    :ZOTERO:   Yes
+    :TYPE:     Empirical
+    :STATUS:   Reading
+    :RELEVANCE: High
+    :IMPACT:   Regular
+    :CITE:     Yes
+    :END:
+
+    #+BEGIN_SRC bibtex
+
+    #+END_SRC
+
+| *Background*                                  | Firm-centric Comparative Political Economy (CPE) approach stablishes that macroeconomic growth is determined by competitiveness gains. More recently, there is a macroeconomic turn to consumption-related variables.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| *Supporting Ideas*                            | Mortgage provision is one of the principal drivers of growth in the financial sector. House price increases is related to household endebtedness in advanced economies. Household indebtedness has a positive short-term effect on growth but a negative one on the long-run                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| *Purpose*                                     | The authors argue that CPE does not consider the financial sector sufficiently, mainly regarding household indebtednes.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+| *Originality/value (Contribution)*            | Connect house prices with household indebtedness and the latter with economic growth. Additionally, evaluate whether household indebtedness and house prices affects each other in *both* directions.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| *Relevance*                                   | Analyze almost all the countries intended for the dissertation in a similar time range. So, it is an important paper for comparison.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
+| *Design/methodology/approach*                 | Three sets of equations: debt (households and business) on GDP growth; households debt as a function of house prices and GDP and; house prices as a function o household indebtedness and GDP. Specification tested: ARDL with robust panel-corrected standard errors (PCSE); mean group (MG) estimator to evaluate the *consistency* of the parameter (more robust in case of country heterogeneity) and two ADL model to examine the VoC subcategories using median value for each country of the stock market value traded to GDP ratio divided by the bank credit to GDP                                                                                                                                                           |
+| *Time range*                                  | 1980 to 2017. The starting point was chosen to be related with the re-rise of financial sector  (see Bengtsson and Rynes 2015).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+| *Countries*                                   | 18 advanced countries in an  unbalanced pooled panel data:  Australia, Belgium, Canada, Denmark, Finland, France, Germany, Ireland, Italy, Japan, the Netherlands, New Zealand, Norway, Spain, Sweden, Switzerland, the UK and the USA. *Market-based banking economies:*  Switzerland, USA, Canada, Spain, Netherlands, Japan, UK, Sweden and Australia. *Less MB:* Germany, France, Norway, Denmark, Finland, Italy, Belgium, Ireland and New Zealand. *LMEs:* Australia, Canada, Ireland, New Zealand, the UK and the USA. *CMEs:* Belgium, Denmark, Finland, Germany, Japan, the Netherlands, Norway, Sweden and Switzerland. *MMEs:* France, Italy and Spain. Countries without hight house inflation:  Germany, Italy and Japan. |
+| *Results*                                     | Household debt has _stronger_ and more statistically significant effects on GDP than business debt. Changes in household debt volumes are largely a result of _house price fluctuations_. Macroeconomic effects of household debt and house prices are present across the cases in the sample and are _not limited to the Anglosphere countries_.                                                                                                                                                                                                                                                                                                                                                                                      |
+| *(Interesting) Findings*                      | The author proposes an classification criteria for more or less marked-based economy based on Beck et al. (2009).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| *Research limitations/implications (Critics)* | Do not include residential investiment variable nor its specification. Since residential investment is not included, there is no reason for house prices affects GDP growth rate.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| *Uncategorized stuff*                         | Present Hay (2013) contribution in which economic growth is determined by house price increases and mortgage deregulation. There is a summary of CPE and VoC critics. The authors indicates that ARDL is adequate in the presence of a unit root.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| *5SS*                                         | House prices are relevant for describing Household indebtedness while the latter determines GDP growth rate in advance economies.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
+
+**** Baseline specification
+
+$$
+GDP = \beta_1 GDP(-1) + \beta_2 GDP(-2) + \beta_3HHD(-1) + \beta_4HHD(-2) + \beta_5 BD(-1) + \beta_6 BD(-2) + \varepsilon
+$$
+
+- GDP depends on its lagged value, on HHD in all specification
+- Only HP second lag affects GDP negatively (Specification 5)
+- BD does not affects GDP on any specification
+
+$$
+HHD = \beta_1 HHD(-1) + \beta_2 HHD(-2) + \beta_3HP(-1) + \beta_4HP(-2) + \beta_5 GDP(-1) + \beta_6 GDP(-2) + \varepsilon
+$$
+
+- HHD depends on its lagged value and on HP in all specification
+- GDP affects HHD only on Mean Group estimator
+
+$$
+HP = \beta_1 HP(-1) + \beta_2 HP(-2) + \beta_3HHD(-1) + \beta_4HHD(-2) + \beta_5 GDP(-1) + \beta_6 GDP(-2) + \varepsilon
+$$
+
+- GDP does not affects HP in any specification
+- HP depends on its lagged value in all specification
+- HHD does not affects HP on Less Market-based banking economies only
+
 *** PARTIAL [#A] [[https://doi.org/10.1146/annurev-economics-080614-115640][Zinman -  Household Debt: Facts, Puzzles, Theories, and Policies]]
    :PROPERTIES:
    :YEAR: 2015
