--- a/Readings/Mortgaging.bib
+++ b/Readings/Mortgaging.bib
@@ -1,191 +1,400 @@
-@Article{Baltagi_survey_2000,
-  author       = {Baltagi, Badi H. and Kao, Chihwa},
-  year         = {2000},
-  title	       = {Nonstationary panels, cointegration in panels and dynamic panels: A survey},
-  pages	       = {7–51},
-  doi	       = {10.1016/s0731-9053(00)15002-9},
-  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15002-9},
-  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
-  publisher    = {Emerald (MCB UP )}
+@Book{1994,
+  title	       = {Social Structures of Accumulation},
+  year	       = 1994,
+  month	       = {Aug},
+  doi	       = {10.1017/cbo9780511559501},
+  url	       = {http://dx.doi.org/10.1017/CBO9780511559501},
+  isbn	       = 9780511559501,
+  publisher    = {Cambridge University Press}
 }
 
-@Article{Blundell,
-  author       = {Blundell, Richard and Bond, Stephen and Windmeijer, Frank},
-  year         = {2000},
-  title	       = {Estimation in dynamic panel data models: Improving on the performance of the standard GMM estimator},
-  pages	       = {53–91},
-  issn	       = {0731-9053},
-  doi	       = {10.1016/s0731-9053(00)15003-0},
-  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15003-0},
-  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
-  publisher    = {Emerald (MCB UP )}
+@Article{Green_International_2014,
+  author       = {Green, Richard K.},
+  year	       = {2014},
+  title        = {International Comparisons of Mortgages},
+  pages	       = {107–122},
+  doi	       = {10.1016/b978-0-12-401743-6.00008-1},
+  url	       = {http://dx.doi.org/10.1016/B978-0-12-401743-6.00008-1},
+  journal      = {Introduction to Mortgages & Mortgage Backed Securities},
+  publisher    = {Elsevier}
 }
 
-@Article{Pedroni_FMOLS_2001,
-  author       = {Pedroni, Peter},
-  year         = {2001},
-  title	       = {Fully modified OLS for heterogeneous cointegrated panels},
-  pages	       = {93–130},
-  doi	       = {10.1016/s0731-9053(00)15004-2},
-  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15004-2},
-  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
-  publisher    = {Emerald (MCB UP)}
+@Article{Green_Subprime_2014,
+  author       = {Green, Richard K.},
+  year	       = {2014},
+  title        = {The Subprime Crisis},
+  pages	       = {123–141},
+  doi	       = {10.1016/b978-0-12-401743-6.00009-3},
+  url	       = {http://dx.doi.org/10.1016/B978-0-12-401743-6.00009-3},
+  journal      = {Introduction to Mortgages & Mortgage Backed Securities},
+  publisher    = {Elsevier}
 }
 
-@Article{Kao_Inference_2001,
-  author       = {Kao, Chihwa and Chiang, Min-Hsien},
-  year         = {2001},
-  title	       = {On the estimation and inference of a cointegrated regression in panel data},
-  pages	       = {179–222},
-  doi	       = {10.1016/s0731-9053(00)15007-8},
-  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15007-8},
-  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
-  publisher    = {Emerald (MCB UP)}
+@Article{Green_Subprime_2014,
+  author       = {Green, Richard K.},
+  year	       = {2014},
+  title        = {Consumers in Mortgage Markets},
+  pages	       = {123–141},
+  doi	       = {10.1016/b978-0-12-401743-6.00009-3},
+  url	       = {http://dx.doi.org/10.1016/B978-0-12-401743-6.00009-3},
+  journal      = {Introduction to Mortgages & Mortgage Backed Securities},
+  publisher    = {Elsevier}
 }
 
-@Article{Murray_URUN_2001,
-  author       = {Murray, Christian J. and Papell, David H.},
-  year         = {2001},
-  title	       = {Testing for unit roots in panels in the presence of structural change with an application to OECD unemployment},
-  pages	       = {223–238},
-  doi	       = {10.1016/s0731-9053(00)15008-x},
-  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15008-X},
-  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
-  publisher    = {Emerald (MCB UP)}
+@Article{1991,
+  title	       = {Housing Markets and Housing Institutions: An International Comparison},
+  year	       = {1991},
+  doi	       = {10.1007/978-94-011-3915-1},
+  url	       = {http://dx.doi.org/10.1007/978-94-011-3915-1},
+  publisher    = {Springer Netherlands}
 }
 
-@Article{Yin,
-  author       = {Yin, Yong and Wu, Shaowen},
-  year         = {2001},
-  title	       = {Stationarity tests in heterogeneous panels},
-  pages	       = {275–296},
-  doi	       = {10.1016/s0731-9053(00)15010-8},
-  url	       = {http://dx.doi.org/10.1016/S0731-9053(00)15010-8},
-  journal      = {Nonstationary Panels, Panel Cointegration, and Dynamic Panels},
-  publisher    = {Emerald (MCB UP)}
+@Article{Bengs_1991,
+  author       = {Bengs, Christer and Loikkanen, Heikki A.},
+  title	       = {The Finnish Housing Market: Structure, Institutions, and Policy Issues},
+  year	       = {1991},
+  pages	       = {63–112},
+  doi	       = {10.1007/978-94-011-3915-1_3},
+  url	       = {http://dx.doi.org/10.1007/978-94-011-3915-1_3},
+  journal      = {Housing Markets and Housing Institutions: An International Comparison},
+  publisher    = {Springer Netherlands}
 }
 
-@Article{Breitung_URCointegration_2008,
-  author       = {Breitung, Jörg and Pesaran, M. Hashem},
-  title	       = {Unit Roots and Cointegration in Panels},
-  year         = {2008},
-  pages	       = {279–322},
-  doi	       = {10.1007/978-3-540-75892-1_9},
-  url	       = {http://dx.doi.org/10.1007/978-3-540-75892-1_9},
-  journal      = {The Econometrics of Panel Data},
-  publisher    = {Springer Berlin Heidelberg}
+@Article{Anas_Swedish_1991,
+  author       = {Anas, Alex and Jirlow, Ulf and Hårsman, Björn and Snickars, Folke},
+  title	       = {The Swedish Housing Market: Development and Institutional Setting},
+  year	       = {1991},
+  pages	       = {31–62},
+  doi	       = {10.1007/978-94-011-3915-1_2},
+  url	       = {http://dx.doi.org/10.1007/978-94-011-3915-1_2},
+  journal      = {Housing Markets and Housing Institutions: An International Comparison},
+  publisher    = {Springer Netherlands}
 }
 
-@Article{Balestra_Fixed_2008,
-  author       = {Balestra, Pietro and Krishnakumar, Jayalakshmi},
-  title	       = {Fixed Effects Models and Fixed Coefficients Models},
-  year	       = {2008},
-  pages	       = {23–48},
-  doi	       = {10.1007/978-3-540-75892-1_2},
-  url	       = {http://dx.doi.org/10.1007/978-3-540-75892-1_2},
-  journal      = {The Econometrics of Panel Data},
-  publisher    = {Springer Berlin Heidelberg}
+@Article{Harsman_Comparative_1991,
+  author       = {Hårsman, Björn and Quigley, John M.},
+  title	       = {Housing Markets and Housing Institutions in a Comparative Context},
+  year	       = {1991},
+  pages	       = {1–29},
+  doi	       = {10.1007/978-94-011-3915-1_1},
+  url	       = {http://dx.doi.org/10.1007/978-94-011-3915-1_1},
+  journal      = {Housing Markets and Housing Institutions: An International Comparison},
+  publisher    = {Springer Netherlands}
 }
 
-@Article{Balazsi_Random_2017,
-  author       = {Balazsi, Laszlo and Baltagi, Badi H. and Matyas,
-                  Laszlo and Pus, Daria},
-  title	       = {Random Effects Models},
-  year	       = {2017},
-  pages	       = {35–69},
-  doi	       = {10.1007/978-3-319-60783-2_2},
-  url	       = {http://dx.doi.org/10.1007/978-3-319-60783-2_2},
-  journal      = {The Econometrics of Multi-dimensional Panels},
-  publisher    = {Springer International Publishing}
-}
 
-@Article{Balazsi_Fixed_2017,
-  author       = {Balazsi, Laszlo and Matyas, Laszlo and Wansbeek,
-                  Tom},
-  title	       = {Fixed Effects Models},
-  year	       = {2017},
-  pages	       = {1–34},
-  doi	       = {10.1007/978-3-319-60783-2_1},
-  url	       = {http://dx.doi.org/10.1007/978-3-319-60783-2_1},
-  journal      = {The Econometrics of Multi-dimensional Panels},
-  publisher    = {Springer International Publishing}
-}
 
-@Article{Baltagi_Mhousing_2017,
-  author       = {Baltagi, Badi H. and Bresson, Georges},
-  title	       = {Modelling Housing Using Multi-dimensional Panel Data},
-  year	       = 2017,
-  pages	       = {349–376},
-  doi	       = {10.1007/978-3-319-60783-2_12},
-  url	       = {http://dx.doi.org/10.1007/978-3-319-60783-2_12},
-  journal      = {The Econometrics of Multi-dimensional Panels},
-  publisher    = {Springer International Publishing}
-}
-
-@Article{Beck_What_1995,
-  author       = {Beck, Nathaniel and Katz, Jonathan N.},
-  title	       = {What To Do (and Not to Do) with Time-Series Cross-Section Data},
-  year	       = {1995},
-  volume       = {89},
-  number       = {3},
-  month	       = {Sep},
-  pages	       = {634–647},
-  doi	       = {10.2307/2082979},
-  url	       = {http://dx.doi.org/10.2307/2082979},
-  journal      = {American Political Science Review},
-  publisher    = {Cambridge University Press (CUP)}
-}
-
-@Article{Dumitrescu_Granger_2012,
-  author       = {Dumitrescu, Elena-Ivona and Hurlin, Christophe},
-  title	       = {Testing for Granger non-causality in heterogeneous panels},
-  year	       = {2012},
-  volume       = {29},
+@Article{Dixon_Pension_2009,
+  author       = {Dixon, Adam D. and Sorsa, Ville-Pekka},
+  title	       = {Institutional Change and the Financialisation of Pensions in Europe},
+  year	       = {2009},
+  volume       = {13},
   number       = {4},
-  month	       = {Jul},
-  pages	       = {1450–1460},
-  doi	       = {10.1016/j.econmod.2012.02.014},
-  url	       = {http://dx.doi.org/10.1016/j.econmod.2012.02.014},
-  journal      = {Economic Modelling},
+  month	       = {Dec},
+  pages	       = {347–367},
+  doi	       = {10.1179/102452909x12506915718111},
+  url	       = {http://dx.doi.org/10.1179/102452909X12506915718111},
+  journal      = {Competition & Change},
+  publisher    = {SAGE Publications}
+}
+
+@Article{Ehrmann_2004,
+  author       = {Ehrmann, Michael and Worms, Andreas},
+  title	       = {Bank Networks and Monetary Policy Transmission},
+  year	       = {2004},
+  volume       = {2},
+  number       = {6},
+  month	       = {Dec},
+  pages	       = {1148–1171},
+  doi	       = {10.1162/1542476042813904},
+  url	       = {http://dx.doi.org/10.1162/1542476042813904},
+  journal      = {Journal of the European Economic Association},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+@Article{Sa_Inflows_2013,
+  author       = {Sá, Filipa and Towbin, Pascal and Wieladek, Tomasz},
+  title	       = {CAPITAL INFLOWS, FINANCIAL STRUCTURE AND HOUSING BOOMS},
+  year	       = {2013},
+  volume       = {12},
+  number       = {2},
+  month	       = {Dec},
+  pages	       = {522–546},
+  doi	       = {10.1111/jeea.12047},
+  url	       = {http://dx.doi.org/10.1111/jeea.12047},
+  journal      = {Journal of the European Economic Association},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+@Article{Hoffmann_2019,
+  author       = {Hoffmann, Mathias and Stewen, Iryna},
+  title	       = {Holes in the Dike: The Global Savings Glut, U.S. House Prices, and the Long Shadow of Banking Deregulation},
+  year	       = {2019},
+  volume       = {18},
+  number       = {4},
+  month	       = {Sep},
+  pages	       = {2013–2055},
+  doi	       = {10.1093/jeea/jvz045},
+  url	       = {http://dx.doi.org/10.1093/jeea/jvz045},
+  journal      = {Journal of the European Economic Association},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+@Article{Green_2010,
+  author       = {Green, Richard K. and Wachter, Susan M.},
+  title	       = {The Housing Finance Revolution},
+  year	       = {2010},
+  month	       = {Apr},
+  pages	       = {414–445},
+  doi	       = {10.1002/9781444317978.ch18},
+  url	       = {http://dx.doi.org/10.1002/9781444317978.ch18},
+  isbn	       = 9781405192156,
+  journal      = {The Blackwell Companion to the Economics of Housing},
+  publisher    = {Wiley-Blackwell}
+}
+
+
+
+
+
+
+
+
+
+@Article{Kohl_2020,
+  author       = {Kohl, Sebastian},
+  title	       = {Too much mortgage debt? The effect of housing financialization on housing supply and residential capital formation},
+  year	       = {2020},
+  month	       = {Sep},
+  doi	       = {10.1093/ser/mwaa030},
+  url	       = {http://dx.doi.org/10.1093/ser/mwaa030},
+  journal      = {Socio-Economic Review},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+
+
+@Article{Green_Historical_2005,
+  author       = {Green, Richard K and Wachter, Susan M},
+  title	       = {The American Mortgage in Historical and International Context},
+  year	       = {2005},
+  volume       = {19},
+  number       = {4},
+  month	       = {Nov},
+  pages	       = {93–114},
+  doi	       = {10.1257/089533005775196660},
+  url	       = {http://dx.doi.org/10.1257/089533005775196660},
+  journal      = {Journal of Economic Perspectives},
+  publisher    = {American Economic Association}
+}
+
+@Article{Englund_2016,
+  author       = {Englund, Peter},
+  title	       = {Milestones in Swedish Housing Finance},
+  year	       = 2016,
+  month	       = {Jan},
+  pages	       = {375–391},
+  doi	       = {10.1002/9781118929421.ch22},
+  url	       = {http://dx.doi.org/10.1002/9781118929421.ch22},
+  isbn	       = 9781118929452,
+  journal      = {Milestones in European Housing Finance},
+  publisher    = {John Wiley & Sons, Ltd}
+}
+
+
+
+@Article{Jord_Redux_2020,
+  author       = {Jordà, Òscar and Richter, Björn and Schularick,
+                  Moritz and Taylor, Alan M},
+  title	       = {Bank Capital Redux: Solvency, Liquidity and Crisis},
+  year	       = 2020,
+  month	       = {Aug},
+  issn	       = {1467-937X},
+  doi	       = {10.1093/restud/rdaa040},
+  url	       = {http://dx.doi.org/10.1093/restud/rdaa040},
+  journal      = {The Review of Economic Studies},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+@Article{Greenwood_2013,
+  author       = {Greenwood, Robin and Scharfstein, David},
+  title	       = {The Growth of Finance},
+  year	       = 2013,
+  volume       = 27,
+  number       = 2,
+  month	       = {Feb},
+  pages	       = {3–28},
+  issn	       = {0895-3309},
+  doi	       = {10.1257/jep.27.2.3},
+  url	       = {http://dx.doi.org/10.1257/jep.27.2.3},
+  journal      = {Journal of Economic Perspectives},
+  publisher    = {American Economic Association}
+}
+
+@Article{Van_Gunten_2018,
+  author       = {Van Gunten, Tod and Navot, Edo},
+  title	       = {Varieties of indebtedness: Financialization and mortgage market institutions in Europe},
+  year	       = {2018},
+  volume       = {70},
+  month	       = {Feb},
+  pages	       = {90–106},
+  doi	       = {10.1016/j.ssresearch.2017.11.005},
+  url	       = {http://dx.doi.org/10.1016/j.ssresearch.2017.11.005},
+  journal      = {Social Science Research},
   publisher    = {Elsevier BV}
 }
 
-@Article{Labra_Lillo_2018,
-  author       = {Labra Lillo, Romilio and Torrecillas, Celia},
-  title	       = {Estimating dynamic Panel data. A practical approach to perform long panels.},
-  year	       = {2018},
-  volume       = {41},
-  number       = {1},
-  month	       = {Jan},
-  pages	       = {31–52},
-  issn	       = {0120-1751},
-  doi	       = {10.15446/rce.v41n1.61885},
-  url	       = {http://dx.doi.org/10.15446/rce.v41n1.61885},
-  journal      = {Revista Colombiana de Estadística},
-  publisher    = {Universidad Nacional de Colombia}
+@Article{Schwartz_2009,
+  author       = {Schwartz, Herman M. and Seabrooke, Leonard},
+  title	       = {Varieties of Residential Capitalism in the International Political Economy: Old Welfare States and the New Politics of Housing},
+  year	       = {2009},
+  pages	       = {1–27},
+  doi	       = {10.1057/9780230280441_1},
+  url	       = {http://dx.doi.org/10.1057/9780230280441_1},
+  journal      = {The Politics of Housing Booms and Busts},
+  publisher    = {Palgrave Macmillan UK}
 }
 
-@Article{Maddala_UR_1999,
-  author       = {Maddala, G. S. and Wu, Shaowen},
-  title	       = {A Comparative Study of Unit Root Tests with Panel Data and a New Simple Test},
-  year	       = {1999},
-  volume       = {61},
+
+
+@Article{Blackwell_2017,
+  author       = {Blackwell, Timothy and Kohl, Sebastian},
+  title	       = {The origins of national housing finance systems: a
+                  comparative investigation into historical variations
+                  in mortgage finance regimes},
+  year	       = 2017,
+  volume       = 25,
+  number       = 1,
+  month	       = {Dec},
+  pages	       = {49–74},
+  issn	       = {1466-4526},
+  doi	       = {10.1080/09692290.2017.1403358},
+  url	       = {http://dx.doi.org/10.1080/09692290.2017.1403358},
+  journal      = {Review of International Political Economy},
+  publisher    = {Informa UK Limited}
+}
+
+
+
+@Article{Jord__2019,
+  author       = {Jordà, Òscar and Schularick, Moritz and Taylor,
+                  Alan},
+  title	       = {The Total Risk Premium Puzzle},
+  year	       = 2019,
+  month	       = {Mar},
+  doi	       = {10.3386/w25653},
+  url	       = {http://dx.doi.org/10.3386/w25653},
+  publisher    = {National Bureau of Economic Research}
+}
+
+@Article{Jord_Betting_2015,
+  author       = {Jordà, Òscar and Schularick, Moritz and Taylor, Alan
+                  M.},
+  title	       = {Betting the house},
+  year	       = 2015,
+  volume       = 96,
+  month	       = {Jul},
+  pages	       = {S2–S18},
+  issn	       = {0022-1996},
+  doi	       = {10.1016/j.jinteco.2014.12.011},
+  url	       = {http://dx.doi.org/10.1016/j.jinteco.2014.12.011},
+  journal      = {Journal of International Economics},
+  publisher    = {Elsevier BV}
+}
+
+@Article{Knoll_2017,
+  author       = {Knoll, Katharina and Schularick, Moritz and Steger,
+                  Thomas},
+  title	       = {No Price Like Home: Global House Prices, 1870–2012},
+  year	       = 2017,
+  volume       = 107,
+  number       = 2,
+  month	       = {Feb},
+  pages	       = {331–353},
+  issn	       = {0002-8282},
+  doi	       = {10.1257/aer.20150501},
+  url	       = {http://dx.doi.org/10.1257/aer.20150501},
+  journal      = {American Economic Review},
+  publisher    = {American Economic Association}
+}
+
+@Article{Wachter_bubbles_2015,
+  author       = {Wachter, Susan},
+  title	       = {The Housing and Credit Bubbles in the United States and Europe: A Comparison},
+  year	       = {2015},
+  volume       = {47},
   number       = {S1},
-  month	       = {Nov},
-  pages	       = {631–652},
-  doi	       = {10.1111/1468-0084.0610s1631},
-  url	       = {http://dx.doi.org/10.1111/1468-0084.0610s1631},
-  journal      = {Oxford Bulletin of Economics and Statistics},
+  month	       = {Mar},
+  pages	       = {37–42},
+  doi	       = {10.1111/jmcb.12188},
+  url	       = {http://dx.doi.org/10.1111/jmcb.12188},
+  journal      = {Journal of Money, Credit and Banking},
   publisher    = {Wiley}
 }
 
-@Article{Blanchard,
-  author       = {Blanchard, Pierre},
-  title	       = {Software Review},
-  pages	       = {907–950},
-  doi	       = {10.1007/978-3-540-75892-1_26},
-  url	       = {http://dx.doi.org/10.1007/978-3-540-75892-1_26},
-  isbn	       = 9783540758921,
-  journal      = {The Econometrics of Panel Data},
-  publisher    = {Springer Berlin Heidelberg}
+
+
+@Article{Blancheton_2013,
+  author       = {Blancheton, Bertrand and Bonin, Hubert and Le Bris,
+                  David},
+  title	       = {The French paradox: A financial crisis during the
+                  golden age of the 1960s},
+  year	       = 2013,
+  volume       = 56,
+  number       = 3,
+  month	       = {Aug},
+  pages	       = {391–413},
+  issn	       = {1743-7938},
+  doi	       = {10.1080/00076791.2013.800967},
+  url	       = {http://dx.doi.org/10.1080/00076791.2013.800967},
+  journal      = {Business History},
+  publisher    = {Informa UK Limited}
 }
+
+@Article{Kohl_Financialization_2018,
+  author       = {Kohl, Sebastian},
+  title	       = {More Mortgages, More Homes? The Effect of Housing
+                  Financialization on Homeownership in Historical
+                  Perspective},
+  year	       = 2018,
+  volume       = 46,
+  number       = 2,
+  month	       = {Jan},
+  pages	       = {177–203},
+  issn	       = {1552-7514},
+  doi	       = {10.1177/0032329218755750},
+  url	       = {http://dx.doi.org/10.1177/0032329218755750},
+  journal      = {Politics & Society},
+  publisher    = {SAGE Publications}
+}
+
+@Article{Agnello_Cycle_2019,
+  author       = {Agnello, Luca and Castro, Vitor and Sousa, Ricardo M.},
+  title	       = {The Housing Cycle: What Role for Mortgage Market Development and Housing Finance?},
+  year	       = {2019},
+  volume       = {61},
+  number       = {4},
+  month	       = {Jun},
+  pages	       = {607–670},
+  doi	       = {10.1007/s11146-019-09705-z},
+  url	       = {http://dx.doi.org/10.1007/s11146-019-09705-z},
+  journal      = {The Journal of Real Estate Finance and Economics},
+  publisher    = {Springer Science and Business Media LLC}
+}
+
+@Article{Andrews_OECD_2011,
+  year	       = {2011},
+  month	       = {Jan},
+  issn	       = {1815-1973},
+  doi	       = {10.1787/5kgk8t2k9vf3-en},
+  url	       = {http://dx.doi.org/10.1787/5kgk8t2k9vf3-en},
+  journal      = {OECD Economics Department Working Papers},
+  publisher    = {Organisation for Economic Co-Operation and
+                  Development (OECD)}
+}
+
+
+
+
+
+
